test(service): añadir EstadisticasServiceTest para US-28
- organizador_sinEventos_devuelveCeros: todos los campos a 0, no llama a
TicketRepository
- organizador_conEventosSinVentas_ingresosCero: 2 eventos con 0 ventas →
ocupación y ingresos 0
- organizador_conVentas_calculaCorrectamente: 50+75 entradas, ingresos
reales del repo,
  ocupación media 62.50%
- organizador_conVentas_ingresoNulo_trataComoZero: null del repo →
BigDecimal.ZERO
- usuario_noOrganizador_lanzaUnauthorized

Closes #185